test_scores/negative_dimers/features/Q15427.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q15427.pkl.xz